infra/enricher/enricher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enricher
spec:
  type: LoadBalancer
  selector:
    app: enricher
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
