infra/enricher/enricher_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enricher
spec:
  selector:
    app: enricher
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
